<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>br.com.studyjakartajpa</groupId>
	<artifactId>studyjakartajpa</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<description>Project Study Jakarta JPA and EclipseLink</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.project.sourceRoots.warningsDisabled>true</maven.project.sourceRoots.warningsDisabled>
		<java.version>21</java.version>
		<jakarta.version>3.2.0</jakarta.version>
		<eclipselink.version>4.0.9</eclipselink.version>
		<postgresql.version>42.7.8</postgresql.version>
		<lombok.version>1.18.42</lombok.version>
		<apache.commons-lang3.version>3.20.0</apache.commons-lang3.version>
		<log4j-api-version>2.25.3</log4j-api-version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>jakarta.persistence</groupId>
			<artifactId>jakarta.persistence-api</artifactId>
			<version>${jakarta.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>eclipselink</artifactId>
			<version>${eclipselink.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
			<version>${eclipselink.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>${postgresql.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${apache.commons-lang3.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j-api-version}</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.eclipse.persistence</groupId>
							<artifactId>
								org.eclipse.persistence.jpa.modelgen.processor</artifactId>
							<version>${eclipselink.version}</version>
						</path>
					</annotationProcessorPaths>
					<compilerArgs>
						<arg>
							-Aeclipselink.persistencexml=${project.basedir}/src/main/resources/META-INF/persistence.xml</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>